# TelServerLinux

./: CMakeLists.txt  README.md
src/: accept_thread.c  check_authclient_thread.c  check_client_thread.c  client_info.h  client_table.c  client_table.h  com_fu_server_ServerLib.h  crc.h  h_thread.c  h_thread.h  handle_thread.c  hmsglist.cpp  hmsglist.h  j_callback.h  jni_server.c  list.c  log.h  m_data.h  main.c  map.h  msg.h  read_thread.c  server.c  server.cpp  server.h  socket.c  socket.h
src/com/fu/server/: Client.java  Main.java  ServerLib.java
